# RedSeaInterpolation

./: CMakeLists.txt  LICENSE  README.md  generate_tags_dependencies.sh
cpp/: CMakeLists.txt
cpp/example/: interpolate.cpp  interpolate_range.cpp  reader.h  reader10.h
cpp/example/yaml_files/: charac10.yaml  charac2.yaml  charac3.yaml  charac5.yaml  charac6.yaml  charac8.yaml  charac9.yaml  v1.yaml  v10.yaml  v4.yaml  v9.yaml  w4.yaml
cpp/include/: interpolationmatrix.h  point.h  referencefunctions.h  scalarfield.h
cpp/include_t/: interpolation.h  referencefunctions.h  scalarfield.h
cpp/print f/: charADAN2.txt  lol  print f.cpp
cpp/rs_example2/: charac.yaml  current_ex2.csv  current_ex2.csv~  current_ex2_b.csv  current_ex2_b_1.csv  current_ex2_b_1_seq.csv  current_ex2_b_1_wp3_fix.csv  current_ex3_fx.csv  current_ex4.csv  current_ex4_wp1.csv  current_ex4_wp2.csv  current_ex4_wp3.csv  current_ex4a0.5.csv  current_ex5.csv  ini_ex2.csv  ini_ex2_b.csv  ini_ex2_b_1.csv  ini_ex2_b_1_fx.csv  ini_ex2_b_1_seq.csv  ini_ex2_b_1_wp1.csv  ini_ex3_fx.csv  ini_ex3_wp1.csv  ini_ex3_wp1_fx.csv  ini_ex3_wp2.csv  ini_ex3_wp3.csv  ini_ex4.csv  ini_ex4_wp.csv  ini_ex4a0.5.csv  ini_ex5.csv  path_planning0_p.gdx  rs_ex2.gms  rs_ex2.lst  rs_ex2_b.gms  rs_ex2_b.gms~  rs_ex2_b.lst  rs_ex2_b_1.gms  rs_ex2_b_1.lst  rs_ex2_b_1_seq.gms  rs_ex2_b_1_wp.gms  rs_ex2_b_1_wp.lst  (+30 more)
cpp/rs_example2/225a/grid199000001/: gmsrerun.run  runit.sh
cpp/rs_example2/225a/grid199000002/: gmsrerun.run  runit.sh
cpp/rs_example2/225a/grid199000003/: gmsrerun.run  runit.sh
cpp/rs_example2/225a/grid199000004/: gmsrerun.run  runit.sh
cpp/rs_example2/225a/grid199000005/: gmsrerun.run  runit.sh
cpp/rs_example2/225a/grid199000007/: gmsrerun.run  runit.sh
cpp/rs_example2/225a/grid199000008/: gmsrerun.run  runit.sh
cpp/rs_example2/225a/grid199000009/: gmsrerun.run  runit.sh
cpp/rs_example2/225a/grid199000011/: gmsrerun.run  runit.sh
cpp/rs_example2/225a/grid199000012/: gmsrerun.run  runit.sh
cpp/rs_example2/225a/grid199000013/: gmsrerun.run  runit.sh
cpp/rs_example2/225a/grid199000014/: gmsrerun.run  runit.sh
cpp/rs_example2/225a/grid199000015/: gmsrerun.run  runit.sh
cpp/rs_example2/225a/grid199000017/: gmsrerun.run  runit.sh
cpp/src/: interpolation.cpp  referencefunctions.cpp  scalarfield.cpp
cpp/test/: #test_scalarfield.cpp#  CMakeLists.txt  test_interpolation.cpp  test_referencefunctions.cpp  test_scalarfield.cpp  test_scalarfield_u.yaml  test_scalarfield_v.yaml  test_scalarfield_w.yaml
python/: coefs.py  (+2 more)
(+245 files in other folders)
